# monarch-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.mm/: mm_session.pickle
src/monarch_mcp/: server.py
